--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -192,3 +192,11 @@ eprint = {
   year = {2013},
   note = {Accessed 17.01.2019}
 }
+
+@misc{SparseMatrixCSC,
+  key = {SparseMatrixCSC docs},
+  url = {https://docs.julialang.org/en/v1/stdlib/SparseArrays/#SparseArrays.SparseMatrixCSC},
+  urldate = {2019-02-27},
+  year = {n.d.},
+  note = {Accessed 27.02.2019}
+}
