--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 \pagenumbering{arabic}                               %Sets the page numbering to arabic numbers.
 
 % \input{01_introduction.tex}
-% \input{02_theory.tex}
+\input{02_theory.tex}
 \input{03_implementation.tex}
 % \input{04_flow_solver_with_AD.tex}
 % \input{05_conclusion_and_future_work.tex}
